<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".activity.CadastroUsuarioTela">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:weightSum="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/tituloCadastroUsuario"
            android:id="@+id/txTituloCadastrarUsuario"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.34"
            android:textColor="#161979" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/codigoUsuario"
                android:id="@+id/txCodigoUsuario" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/edCodigoUsuario"
                android:inputType="textPersonName"
                android:textAlignment="center"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/nomeUsuario"
                android:id="@+id/txNomeUsuario" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/edNomeUsuario"
                android:inputType="textPersonName"
                android:textAlignment="center"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/dataUsuario"
                android:id="@+id/txData" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="date"
                android:ems="10"
                android:id="@+id/edData"
                android:textAlignment="center"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/sexo"
                android:id="@+id/txSexo" />

            <Spinner
                android:layout_width="130dp"
                android:layout_height="match_parent"
                android:textAlignment="center"
                android:spinnerMode="dialog"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/sexo_spinner" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/email"
                android:id="@+id/txEmail" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:ems="10"
                android:textAlignment="center"
                android:id="@+id/edEmail" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.40">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/senhaUsuario"
                android:id="@+id/txSenhaUsuario" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/edSenhaUsuario"
                android:textAlignment="center"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="65dp"
                android:text="@string/salvar"
                android:id="@+id/btSalvar"
                android:layout_weight="0.30"
                android:background="#5b86f2" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="65dp"
                android:text="@string/mostrar"
                android:id="@+id/btMostrar"
                android:layout_weight="0.30"
                android:background="#61dd80" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="65dp"
                android:text="@string/deletar"
                android:id="@+id/btDeletar"
                android:layout_weight="0.30"
                android:background="#ef6666" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="65dp"
                android:text="@string/limpar"
                android:id="@+id/btLimpar"
                android:layout_weight="0.30"
                android:background="#ffea00" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
