<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".activity.CadastroLinhaTela">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:weightSum="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/tituloCadastroLinha"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:id="@+id/txTituloCadastrarLinha"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.38"
            android:textColor="#161979" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/codigoLinha"
                android:id="@+id/txCodigoLinha" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/edCodigoLinha"
                android:inputType="textPersonName"
                android:layout_weight="0.80"
                android:textAlignment="center"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/nomeLinha"
                android:id="@+id/txNomeLinha" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/edNomeLinha"
                android:inputType="textPersonName"
                android:layout_weight="1"
                android:textAlignment="center"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.30">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/codigoPonto"
                android:id="@+id/txCodigoPonto" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/edcodigoPonto"
                android:textAlignment="center"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="65dp"
                android:text="@string/salvar"
                android:id="@+id/btSalvar"
                android:layout_weight="0.30"
                android:background="#5b86f2"
                android:textAlignment="center"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="65dp"
                android:text="@string/mostrar"
                android:id="@+id/btMostrar"
                android:layout_weight="0.30"
                android:background="#61dd80" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="65dp"
                android:text="@string/deletar"
                android:id="@+id/btDeletar"
                android:layout_weight="0.30"
                android:background="#ef6666" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="65dp"
                android:text="@string/limpar"
                android:id="@+id/btLimpar"
                android:layout_weight="0.30"
                android:background="#ffea00" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
