<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".activity.CadastroEmpresaTela">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:weightSum="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/tituloCadastrarEmpresa"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:id="@+id/txTituloCadastrarEmpresa"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.30"
            android:textColor="#161979" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/codigoEmpresa"
                android:id="@+id/txCodigoEmpresa" />

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/edCodigoEmpresa"
                android:inputType="textPersonName"
                android:textAlignment="center"
                android:layout_weight="0.80" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/nomeEmpresa"
                android:id="@+id/txNomeEmpresa" />

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/edNomeEmpresa"
                android:inputType="textPersonName"
                android:textAlignment="center"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/cnpj"
                android:id="@+id/txCnpj" />

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:id="@+id/edCnpj"
                android:layout_weight="1"
                android:inputType="number|textPersonName"
                android:textAlignment="center"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/telefone"
                android:id="@+id/txTelefone" />

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:ems="10"
                android:id="@+id/edTelefone"
                android:textAlignment="center"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1"
            android:layout_weight="0.25">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/endereco"
                android:id="@+id/txEndereco" />

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:id="@+id/edEndereco"
                android:layout_weight="1"
                android:inputType="textPersonName"
                android:textAlignment="center"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="65dp"
                android:text="@string/salvar"
                android:id="@+id/btSalvar"
                android:layout_weight="0.30"
                android:background="#5b86f2" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="65dp"
                android:text="@string/mostrar"
                android:id="@+id/btMostrar"
                android:layout_weight="0.30"
                android:background="#61dd80" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="65dp"
                android:text="@string/deletar"
                android:id="@+id/btDeletar"
                android:layout_weight="0.30"
                android:background="#ef6666" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="65dp"
                android:text="@string/limpar"
                android:id="@+id/btLimpar"
                android:layout_weight="0.30"
                android:background="#ffea00" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
